# makina

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  compose.debug.yml  compose.yml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
assets/styles/: main.css
blog/: models.py  urls.py  utils.py  views.py
blog/migrations/: 0002_alter_post_options_alter_post_body_alter_post_title.py
blog/static/blog/scripts/: management.js
blog/static/blog/styles/: management.css
blog/templates/blog/: post_detail.html  post_list.html  post_manage.html
core/: settings.py  urls.py
pages/templates/pages/: about_us.html  contact_us.html  index.html  privacy_policy.html
requirements/: dev.txt  main.txt  prod.txt
shop/: cart.py  context_processors.py  urls.py  views.py
shop/migrations/: 0001_initial.py
shop/static/shop/scripts/: main.js
shop/templates/shop/: payment_success.html  product_list.html
src/makina/: __init__.py  manage.py  utils.py
src/makina/blog/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
src/makina/blog/migrations/: 0001_initial.py
src/makina/blog/templates/blog/: post_manage.html
src/makina/core/: urls.py
src/makina/core/settings/: base.py  dev.py  prod.py
src/makina/locales/it/LC_MESSAGES/: django.po
src/makina/locales/sq/LC_MESSAGES/: django.po
src/makina/pages/: apps.py  urls.py  views.py
src/makina/pages/templates/pages/: privacy_policy.html
src/makina/shop/: admin.py  apps.py  cart.py  models.py  urls.py  views.py
src/makina/shop/migrations/: 0001_initial.py  0002_product_price_id.py
src/makina/shop/static/shop/scripts/: main.js
src/makina/shop/templates/shop/: cart.html  payment_cancel.html  payment_success.html  product_list.html
src/makina/static/styles/: main.css
src/makina/templates/: base.html  navbar.html
src/makina/templates/registration/: login.html  register.html
src/makina/users/: apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
src/makina/users/migrations/: 0001_initial.py
src/makina/users/templates/users/: profile.html
src/makina/vehicles/: admin.py  apps.py  encoders.py  forms.py  models.py  serializers.py  urls.py  views.py
src/makina/vehicles/management/commands/: createfakevehicles.py
src/makina/vehicles/migrations/: 0001_initial.py  0002_vehicle_year.py  0003_alter_vehicle_options_vehicle_color_and_more.py  0004_vehicle_user_alter_photo_vehicle.py  0005_alter_vehicle_description_alter_vehicle_price_and_more.py
src/makina/vehicles/static/vehicles/styles/: slideshow.css
src/makina/vehicles/templates/vehicles/: vehicle_confirm_delete.html  vehicle_detail.html  vehicle_form.html  vehicle_list.html
templates/: base.html  header.html  navbar.html
templates/bulma/: errors_formset.html  whole_uni_formset.html
templates/registration/: login.html
tests/: test_vehicles.py
users/: forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0002_user_telno.py  0003_registration.py  0004_remove_user_telno_profile.py
users/templates/registration/: activation_email.html  login.html  register.html
vehicles/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0006_alter_vehicle_options.py
vehicles/static/vehicles/scripts/: slideshow.js
vehicles/static/vehicles/styles/: slideshow.css
vehicles/templates/vehicles/: vehicle_detail.html  vehicle_form.html  vehicle_list.html  vehicle_manage.html
